--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Argenmap</title>
+
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
+
   <link rel="shortcut icon" href="src/styles/images/favicon.ico" type="image/x-icon">
 
   <!-- metatags-->
